# nova

./: .clang-format  CMakeLists.txt  imgui.ini
.github/workflows/: build.yml
include/: test.h
include/nova/: application.h  application_specification.h  common.h  game.h  nova.h
include/nova/core/: entity.h  entity_manager.h  file_handler.h  graphics_context.h  graphics_factory.h  logger.h  resource.h  scene.h  scene_settings.h  window.h
include/nova/core/components/: render_component.h  tag_component.h  transform_component.h
include/nova/core/systems/: render_system.h  system.h
include/nova/editor/: editor_gui.h  editor_gui_context.h  editor_gui_window.h  editor_utils.h
include/nova/editor/windows/: graphics_window.h  hierarchy_window.h  inspector_window.h  resource_manager_window.h  resource_viewer_window.h  scene_settings_window.h  scene_window.h  statistics_window.h
include/nova/graphics/: graphics_api.h  graphics_context.h  image.h  material.h  mesh.h  mesh_data.h  shader.h  texture.h
include/nova/graphics/buffers/: buffer.h  frame_buffer.h  index_buffer.h  vertex_array_object.h  vertex_buffer.h  vertex_buffer_layout.h
include/nova/graphics/opengl/: gl_context.h  gl_frame_buffer.h  gl_index_buffer.h  gl_renderer_api.h  gl_shader.h  gl_texture.h  gl_vertex_array_object.h  gl_vertex_buffer.h  opengl.h
include/nova/graphics/renderer/: render_command.h  render_pass.h  renderer.h  renderer_api.h
include/nova/io/: resource_manager.h
include/nova/opengl/: gl.h  gl_context.h  gl_window.h  opengl.h
src/nova/: application.cpp  main.cpp
src/nova/core/: entity.cpp  entity_manager.cpp  file_handler.cpp  graphics_factory.cpp  logger.cpp  scene.cpp  window.cpp
src/nova/core/systems/: render_system.cpp
src/nova/editor/: editor_gui.cpp  editor_gui_window.cpp  editor_utils.cpp
src/nova/editor/windows/: graphics_window.cpp  hierarchy_window.cpp  inspector_window.cpp  resource_manager_window.cpp  resource_viewer_window.cpp  scene_settings_window.cpp  scene_window.cpp  statistics_window.cpp
src/nova/graphics/: graphics_api.cpp  graphics_context.cpp  image.cpp  material.cpp  mesh.cpp  mesh_data.cpp  shader.cpp  texture.cpp
src/nova/graphics/buffers/: frame_buffer.cpp  index_buffer.cpp  vertex_array_object.cpp  vertex_buffer.cpp  vertex_buffer_layout.cpp
src/nova/graphics/opengl/: gl_context.cpp  gl_frame_buffer.cpp  gl_index_buffer.cpp  gl_renderer_api.cpp  gl_shader.cpp  gl_texture.cpp  gl_vertex_array_object.cpp  gl_vertex_buffer.cpp  opengl.cpp
src/nova/graphics/renderer/: render_command.cpp  render_pass.cpp  renderer.cpp  renderer_api.cpp
src/nova/io/: resource_manager.cpp
src/nova/opengl/: gl_context.cpp  gl_window.cpp  opengl.cpp
test/: CMakeLists.txt
test/src/: main.cpp
test_app/: CMakeLists.txt
test_app/include/: test_game.h  test_system.h
test_app/resources/: basic_fragment.glsl  basic_vertex.glsl
test_app/resources/shaders/: basic_fragment.glsl  basic_vertex.glsl
test_app/src/: main.cpp  test_game.cpp
